//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Client {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  emailVerified Boolean [default: false]
  gender Gender
  joinedDate DateTime [default: `now()`, not null]
  address String
  country String
  phone String
  phoneVerified Boolean [default: false]
  avatar String
  dob DateTime
  bio String
  verified Boolean [default: false]
  location ClientLocation
  work Work [not null]
}

Table ClientLocation {
  id String [pk]
  longitude Float [not null]
  latitude Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  clientId String [unique, not null]
  client Client [not null]
}

Table Worker {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  emailVerified Boolean [default: false]
  gender Gender
  joinedDate DateTime [default: `now()`, not null]
  address String
  country String
  phone String
  phoneVerified Boolean [default: false]
  avatar String
  dob DateTime
  bio String
  verified Boolean [default: false]
  location WorkerLocation
  services WorkerService [not null]
  work Work [not null]
}

Table WorkerLocation {
  id String [pk]
  longitude Float [not null]
  latitude Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  workerId String [unique, not null]
  worker Worker [not null]
}

Table Admin {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  joinedDate DateTime [default: `now()`, not null]
}

Table WorkerService {
  worker Worker [not null]
  workerId String [not null]
  service Service [not null]
  serviceId String [not null]

  indexes {
    (workerId, serviceId) [pk]
  }
}

Table Service {
  id String [pk]
  title String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  sections ServiceSection [not null]
  workmen WorkerService [not null]
  work Work [not null]
}

Table Section {
  id String [pk]
  title String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  services ServiceSection [not null]
}

Table ServiceSection {
  section Section [not null]
  sectionId String [not null]
  service Service [not null]
  serviceId String [not null]

  indexes {
    (sectionId, serviceId) [pk]
  }
}

Table Work {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  client Client [not null]
  clientId String [not null]
  worker Worker [not null]
  workerId String [not null]
  service Service [not null]
  serviceId String [not null]
  location WorkLocation
  requestTime DateTime [default: `now()`, not null]
  workStartTime DateTime
  workEndTime DateTime
  paymentId String
}

Table WorkLocation {
  id String [pk]
  longitude Float [not null]
  latitude Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  workId String [unique, not null]
  work Work [not null]
}

Enum Gender {
  MALE
  FEMALE
}

Ref: ClientLocation.clientId - Client.id

Ref: WorkerLocation.workerId - Worker.id

Ref: WorkerService.workerId > Worker.id

Ref: WorkerService.serviceId > Service.id

Ref: ServiceSection.sectionId > Section.id

Ref: ServiceSection.serviceId > Service.id

Ref: Work.clientId > Client.id

Ref: Work.workerId > Worker.id

Ref: Work.serviceId > Service.id

Ref: WorkLocation.workId - Work.id